# text-classifier

./: .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
src/text_classifier/: __init__.py  common_types.py  exceptions.py  main.py
src/text_classifier/config/: settings.py
src/text_classifier/entrypoints/middlewares/http/: __init__.py  error_handler.py
src/text_classifier/entrypoints/middlewares/rabbit/: __init__.py  context.py  error_handler.py
src/text_classifier/entrypoints/v1/: consumers.py  deps.py  endpoints.py  enums.py  schemas.py
src/text_classifier/infra/repositories/: deberta.py  enums.py
src/text_classifier/infra/repositories/result/: __init__.py  base.py  exceptions.py  in_memory.py  models.py
src/text_classifier/services/: text_moderator.py
src/text_classifier/tools/: log.py
