[project]
name = "text-classifier"
version = "0.1.0"
description = ""
requires-python = "~=3.12.0"
dependencies = [
    "asgi-correlation-id~=4.3",
    "fastapi~=0.116",
    "faststream[rabbit]~=0.5.48",
    "loguru~=0.7",
    "orjson>=3.11.3",
    "pydantic-settings>=2.11.0",
    "torch>=2.8.0",
    "transformers[torch]~=4.56",
    "uvicorn[standard]~=0.35",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torchvision = [
  { index = "pytorch-cpu" },
]
torch = { index = "pytorch" }

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-sugar>=1.1.1",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint.isort]
known-local-folder = ["src"]
known-first-party = ["text_classifier", "tests"]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "A",
    "ARG",
    "C",
    "COM",
    "I",
    "LOG",
    "Q",
    "RSE",
    "SIM",
    "SLF",
    "B",
    "BLE",
    "ERA",
    "FBT",
    "PL",
    "S",
    "ASYNC",
    "N",
    "RET",
    "UP",
    "PGH",
    "RUF",
    "T20"
]
ignore = [
    "ASYNC109",
    "PLR0913",
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "E402",
    "F401",
]


[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
plugins = [
    "pydantic.mypy"
]
